# pkg/tool/gonetboxd/model_context/list_prefixes.go
@@ -1,0 +1,21 @@
+package model_context
+
+import (
+	"context"
+	"github.com/funtimecoding/go-library/pkg/generative/mark/response"
+	"github.com/funtimecoding/go-library/pkg/tool/gonetboxd/convert"
+	"github.com/mark3labs/mcp-go/mcp"
+)
+
+func (s *Server) listPrefixes(
+	_ context.Context,
+	_ mcp.CallToolRequest,
+) (*mcp.CallToolResult, error) {
+	result, e := s.client.Prefixes()
+
+	if e != nil {
+		return s.captureDetail(e)
+	}
+
+	return response.SuccessAny(convert.Prefixes(result))
+}
